[gd_scene load_steps=11 format=3 uid="uid://bnbc207ds38pc"]

[ext_resource type="Script" path="res://Dragon_3/Prop.gd" id="1_imb63"]
[ext_resource type="PackedScene" uid="uid://crk8d6vmb2uj4" path="res://models/leg01.blend" id="3_3pt1b"]

[sub_resource type="Curve" id="Curve_l6v6m"]
_data = [Vector2(0.333333, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.4), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_wuwkh"]
curve = SubResource("Curve_l6v6m")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_gpy8j"]
lifetime_randomness = 0.53
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 0.1
emission_ring_radius = 2.0
emission_ring_inner_radius = 1.9
direction = Vector3(0, 0, 0)
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 1.5
initial_velocity_max = 2.0
linear_accel_min = 0.3
linear_accel_max = 0.6
scale_curve = SubResource("CurveTexture_wuwkh")

[sub_resource type="SphereMesh" id="SphereMesh_lrwxb"]
radial_segments = 12
rings = 6

[sub_resource type="CylinderShape3D" id="CylinderShape3D_0wsf3"]
height = 0.5
radius = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3wh6b"]
albedo_color = Color(0.760784, 0.760784, 0.760784, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_wn5cx"]
radius = 0.4
height = 3.0

[sub_resource type="TorusMesh" id="TorusMesh_aletx"]
inner_radius = 0.8
outer_radius = 1.2

[node name="Prop" type="Node3D"]
script = ExtResource("1_imb63")

[node name="FX" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0)
emitting = false
amount = 36
lifetime = 0.4
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_gpy8j")
draw_pass_1 = SubResource("SphereMesh_lrwxb")

[node name="collisonBody" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="collisonBody"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CylinderShape3D_0wsf3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(4, 0, 0, 0, -1.74846e-07, 4, 0, -4, -1.74846e-07, 0, 0, 0.296443)

[node name="leg_left" type="Node3D" parent="."]
visible = false

[node name="leg01" parent="leg_left" instance=ExtResource("3_3pt1b")]

[node name="Cylinder004" parent="leg_left/leg01" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
surface_material_override/0 = SubResource("StandardMaterial3D_3wh6b")

[node name="wing" type="Node3D" parent="."]
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="wing"]
transform = Transform3D(1, 0, 0, 0, 0.691753, 0.722135, 0, -0.722135, 0.691753, 0, -0.0819242, -0.44444)
mesh = SubResource("CapsuleMesh_wn5cx")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1.91069e-15, -4.37114e-08, 1, -1, -4.37114e-08, -1.1566e-22, 4.37114e-08, -1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("TorusMesh_aletx")

[node name="ring" type="Node3D" parent="."]

[connection signal="mouse_entered" from="collisonBody" to="." method="_on_collison_body_mouse_entered"]
[connection signal="mouse_exited" from="collisonBody" to="." method="_on_collison_body_mouse_exited"]

[editable path="leg_left/leg01"]
